changed java vers ion