@@ -1,5 +1,6 @@
 package mate.academy.spring.mapper.impl.response;
 
+import java.util.stream.Collectors;
 import mate.academy.spring.mapper.DtoResponseMapper;
 import mate.academy.spring.model.Order;
 import mate.academy.spring.model.dto.response.OrderResponseDto;
@@ -16,7 +17,7 @@ public class OrderResponseMapper
         orderResponseDto.setTicketId(order.getTickets()
                 .stream()
                 .map(e -> e.getId())
-                .toList());
+                .collect(Collectors.toList()));
         orderResponseDto.setUserId(order.getUser().getId());
         return orderResponseDto;
     }
