@@ -1,5 +1,6 @@
 package mate.academy.spring.mapper.impl.response;
 
+import java.util.stream.Collectors;
 import mate.academy.spring.mapper.DtoResponseMapper;
 import mate.academy.spring.model.ShoppingCart;
 import mate.academy.spring.model.dto.response.ShoppingCartResponseDto;
@@ -15,7 +16,7 @@ public class ShoppingCartResponseMapper
         shoppingCartResponseDto.setTicketIds(shoppingCart.getTickets()
                 .stream()
                 .map(e -> e.getId())
-                .toList());
+                .collect(Collectors.toList()));
         return shoppingCartResponseDto;
     }
 }
